--- a/cra-threejs/package.json
+++ b/cra-threejs/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "three": "^0.160.0",
     "typewriter-effect": "^2.21.0",
